Added simple frontend

--- a/shurl/templates/index.html
+++ b/shurl/templates/index.html
@@ -1,5 +1,4 @@
 <!-- {% load static %} -->
-
 <!doctype html>
 <html lang="ru">
   <head>
@@ -9,17 +8,51 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{% static 'shurl/style.css' %}"/>
     <title>Shurl - url shorter</title>
   </head>
   <body>
+    <h1>Сокращатель ссылок SHURL</h1>
 
-    <form method="POST">
+    <div class="wrapper-form">
+      <form id='create_link_form' method="POST">
         {% csrf_token %}
         {{ form.url }}
         <span>{{ error }}</span>
         <button type="submit">Shurl!</button>
-    </form>
+      </form>
+      <h2 id="short-link-container"></h2>
+    </div>
+    
+
+    {% block javascript %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $('#create_link_form').submit(function () {
+          $.ajax({
+            data: $(this).serialize(),
+            type: $(this).attr('method'),
+            url: '/short_link/create',
+            success: function (response) {
+              var short_link = document.getElementById('short-link-container');
+              short_link.textContent = response.short_url;
+              console.log(response.short_url);
+            },
+            error: function (response) {
+              
+              alert(response.responseJSON.errors);
+              console.log(response.responseJSON.errors);
+            }
+          });
+
+          return false;
+        });
+      })
+    </script>
+    {% endblock javascript %}
+
 
     <!-- Необязательный JavaScript; выберите один из двух! -->
 
