--- a/shurl/templates/index.html
+++ b/shurl/templates/index.html
@@ -1,12 +1,10 @@
-<!-- {% load static %} -->
+{% load static %}
 <!doctype html>
 <html lang="ru">
   <head>
-    <!-- Обязательные метатеги -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'shurl/style.css' %}"/>
     <title>Shurl - url shorter</title>
@@ -23,7 +21,6 @@
       </form>
       <h2 id="short-link-container"></h2>
     </div>
-    
 
     {% block javascript %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -34,35 +31,24 @@
           $.ajax({
             data: $(this).serialize(),
             type: $(this).attr('method'),
-            url: '/short_link/create',
+            url: "{% url 'create_short_url' %}",
             success: function (response) {
               var short_link = document.getElementById('short-link-container');
               short_link.textContent = response.short_url;
               console.log(response.short_url);
             },
             error: function (response) {
-              
               alert(response.responseJSON.errors);
               console.log(response.responseJSON.errors);
             }
           });
 
           return false;
+
         });
       })
     </script>
     {% endblock javascript %}
-
-
-    <!-- Необязательный JavaScript; выберите один из двух! -->
-
-    <!-- Вариант 1: пакет Bootstrap с Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Вариант 2: отдельные JS для Popper и Bootstrap -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+    
   </body>
 </html>
